# vim-engine

./: .gitignore  README.md  pyproject.toml
legacy/current/tests/: test_smoke.py
legacy/current/textual_vim_extended/: config.py  custom_css.py  editor.py
legacy/current/textual_vim_extended/core/: __init__.py  actions.py  commanding.py  mode_handlers.py
legacy/current/textual_vim_extended/modes/: base_mode.py
legacy/current/textual_vim_extended/utils/: cursor_movement.py  cut_paste.py  logger.py  macros.py
src/: editor.py
src/modes/: command_mode.py  insert_mode.py  normal_mode.py
src/utils/: macros.py
src/vim_engine/: __init__.py
src/vim_engine/actions/: __init__.py  command.py  core.py  visual.py
src/vim_engine/adapters/: __init__.py
src/vim_engine/adapters/ratatui/: __init__.py
src/vim_engine/adapters/textual/: __init__.py  app.py  controller.py  log_stream.py
src/vim_engine/buffer/: __init__.py  buffer.py  document.py  registers.py  state.py  sync.py  undo.py  validation.py
src/vim_engine/host/: __init__.py
src/vim_engine/keymaps/: __init__.py  defaults.py  models.py  registry.py  resolver.py
src/vim_engine/logging/: __init__.py  live_stream.py
src/vim_engine/modes/: __init__.py  base_mode.py  command_mode.py  insert_mode.py  keymap_helpers.py  mode_manager.py  normal_mode.py  operator_pipeline.py  visual_mode.py
src/vim_engine/runtime/: __init__.py  telemetry.py
src/vim_engine/selectors/: __init__.py
tests/: conftest.py  test_keymaps_registry.py  test_keymaps_resolver.py  test_modes_keymaps.py  test_textual_adapter.py
