[project]
name = "textual-vim-extended"
version = "0.1.0"
description = "Vim-inspired editing experience for Textual applications."
readme = "README.md"
authors = [{ name = "Vedant Asati" }]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "telelog-python>=0.2.0",
    "textual>=6.6.0",
]
